--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
   rel="stylesheet"
 />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -37,64 +37,64 @@
 <body>
 <div class="container">
   <form id="planner-form">
-    <div class="row">
-      <div class="col-5">9am</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+    <div class="row" id="present future">
+      <div class="col-5 time" data-time="10" > 9am</div>
+      <input type="text" class="form-input time-block past" name="Task-One" id="formbutton" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
-      <div class="col-5">10am</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+    <div class="row" id="present future">
+      <div class="col-5 time" data-time="11" > 10am</div>
+      <input type="text" class="form-input time-block past" name="Task-Two" id="Task-Two" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
-      <div class="col-5">11am</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button button id="saveBtn" class="saveBtn">save</button></div>
+    <div class="row" id="present future">
+      <div class="col-5 time" data-time="12" > 11am</div>
+      <input type="text" class="form-input time-block past" name="Task-Three" id="Task-Three" placeholder="To-Do"/>
+      <div class="col"><button button id="saveBtn" id="saveBtn" class="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
-      <div class="col-5">12pm</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+    <div class="row" id="present future">
+      <div class="col-5 time" data-time="13" > 12pm</div>
+      <input type="text" class="form-input time-block past" name="Task-Four" id="Task-Four" placeholder="To-Do"/>      
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
-      <div class="col-5">1pm</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+    <div class="row" id="present future">
+      <div class="col-5 time" data-time="14" > 1pm</div>
+      <input type="text" class="form-input time-block past" name="Task-Five" id="Task-Five" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
+    <div class="row" id="present future">
       <div class="col-5">2pm</div>
-      <input type="text" class="form-input" name="description"/>
+      <input type="text" class="form-input time-block past" name="Task-Six" id="Task-Six" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info">save</button></div>
     </div>
 
-    <div class="row">
+    <div class="row" id="present future">
       <div class="col-5">3pm</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+      <input type="text" class="form-input time-block past" name="Task-Seven" id="Task-Seven" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
+    <div class="row" id="present future">
       <div class="col-5">4pm</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+      <input type="text" class="form-input time-block past" name="Task-Eight" id="Task-Eight" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
+    <div class="row" id="form-input">
       <div class="col-5">5pm</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+      <input type="text" class="form-input time-block past" name="Task-Nine" id="Task-Nine" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row">
+    <div class="row" id="present future">
       <div class="col-5">6pm</div>
-      <input type="text" class="form-input" name="description"/>
-      <div class="col"><button class="saveBtn btn-info">save</button></div>
+      <input type="text" class="form-input time-block past" name="Task-Ten" id="Task-Ten" placeholder="To-Do"/>
+      <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
   </form>
