more updates to hw wiht tutor

--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
     </div>
 
     <div class="row" id="present future">
-      <div class="col-5">2pm</div>
+      <div class="col-5 time" data-time="15" > 2pm</div>
       <input type="text" class="form-input time-block past" name="Task-Six" id="Task-Six" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info">save</button></div>
     </div>
 
     <div class="row" id="present future">
-      <div class="col-5">3pm</div>
+      <div class="col-5 time" data-time="16" > 3pm</div>
       <input type="text" class="form-input time-block past" name="Task-Seven" id="Task-Seven" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
     <div class="row" id="present future">
-      <div class="col-5">4pm</div>
+      <div class="col-5 time" data-time="17" > 4pm</div>
       <input type="text" class="form-input time-block past" name="Task-Eight" id="Task-Eight" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
     <div class="row" id="form-input">
-      <div class="col-5">5pm</div>
+      <div class="col-5 time" data-time="18" > 5pm</div>
       <input type="text" class="form-input time-block past" name="Task-Nine" id="Task-Nine" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
     <div class="row" id="present future">
-      <div class="col-5">6pm</div>
+      <div class="col-5 time" data-time="19" > 6pm</div>
       <input type="text" class="form-input time-block past" name="Task-Ten" id="Task-Ten" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
