class updates in html

--- a/index.html
+++ b/index.html
@@ -37,61 +37,61 @@
 <body>
 <div class="container">
   <form id="planner-form">
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="10" > 9am</div>
       <input type="text" class="form-input time-block past" name="Task-One" id="formbutton" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="11" > 10am</div>
       <input type="text" class="form-input time-block past" name="Task-Two" id="Task-Two" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="12" > 11am</div>
       <input type="text" class="form-input time-block past" name="Task-Three" id="Task-Three" placeholder="To-Do"/>
       <div class="col"><button button id="saveBtn" id="saveBtn" class="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="13" > 12pm</div>
       <input type="text" class="form-input time-block past" name="Task-Four" id="Task-Four" placeholder="To-Do"/>      
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="14" > 1pm</div>
       <input type="text" class="form-input time-block past" name="Task-Five" id="Task-Five" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="15" > 2pm</div>
       <input type="text" class="form-input time-block past" name="Task-Six" id="Task-Six" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="16" > 3pm</div>
       <input type="text" class="form-input time-block past" name="Task-Seven" id="Task-Seven" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="17" > 4pm</div>
       <input type="text" class="form-input time-block past" name="Task-Eight" id="Task-Eight" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="form-input">
+    <div class="row">
       <div class="col-5 time" data-time="18" > 5pm</div>
       <input type="text" class="form-input time-block past" name="Task-Nine" id="Task-Nine" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
     </div>
 
-    <div class="row" id="present future">
+    <div class="row">
       <div class="col-5 time" data-time="19" > 6pm</div>
       <input type="text" class="form-input time-block past" name="Task-Ten" id="Task-Ten" placeholder="To-Do"/>
       <div class="col"><button class="saveBtn btn-info" id="saveBtn">save</button></div>
